optimized jlink args, raised jdk version to 21, logging level to info, updated readme.md