@@ -1,5 +1,7 @@
 # Pragmasoft site
 
+https://pragmasoft.com.ua
+
 ## Build
 
 `mvnw package`
@@ -18,7 +20,7 @@ Without VSCode, simply copy target/pragmasoftSite.war to the running Tomcat's /w
 
 Install [pack](https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/) cli for your platform, for example using Chocolatey on Windows
 
-`pack build pragmasoft-site --builder paketobuildpacks/builder-jammy-base`
+`pack build docker.io/pragmasoft/site:latest --builder paketobuildpacks/builder-jammy-tiny --tag pragmasoft/site:2024.6.1 --env BP_JVM_VERSION=21 --env BP_JVM_JLINK_ENABLED=true --env BP_JVM_JLINK_ARGS="--no-header-files --no-man-pages --strip-debug --compress=zip-9 --add-modules=java.base,java.sql,jdk.unsupported,java.desktop,java.management,java.instrument,java.security.jgss"`
 
 Run in docker with
 
@@ -26,20 +28,28 @@ Run in docker with
 
 ### Build for arm64 architecture (RPi)
 
-`pack build docker.io/pragmasoft/site:2024061501 --builder dashaun/builder:base  --platform linux/arm64 --publish`
+`pack build docker.io/pragmasoft/site:latest --builder dashaun/builder:tiny --tag pragmasoft/site:2024.6.1 --platform linux/arm64 --publish --env BP_JVM_VERSION=21 --env BP_JVM_JLINK_ENABLED=true --env BP_JVM_JLINK_ARGS="--no-header-files --no-man-pages --strip-debug --compress=zip-9 --add-modules=java.base,java.sql,jdk.unsupported,java.desktop,java.management,java.instrument,java.security.jgss"`
 
 ### Run with podman
 
-`podman run --rm -d -p 8080:8080 docker.io/pragmasoft/site:2024061501`
+`podman run --rm -p 8080:8080 docker.io/pragmasoft/site:2024.6.1`
 
 ### Run with podman as systemd service to survive restarts
 
-RPi OS (bookworm) has old podman version which does not support Quadlets, so we use podman generate instead
+RPi OS (bookworm) has old podman version which does not support Quadlets, so we use `podman generate` instead
 
 ```bash
 sudo -s
-podman run -d -p 80:8080 --name pragmasoft-site docker.io/pragmasoft/site:2024061501
+podman run -d -p 80:8080 --name pragmasoft-site docker.io/pragmasoft/site:2024.6.1
 podman generate systemd pragmasoft-site > /etc/systemd/system/pragmasoft-site.service
-systemctl enable pragmasoft-site.service
-
+podman stop pragmasoft-site
+systemctl enable pragmasoft-site
+systemctl start pragmasoft-site
 ```
+
+## TODO
+
+- ✅ remove debug logging and log file
+- ✅ jlink optimize image
+- ✅ tag latest
+- try automatic version updates
